push come to shove

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
+<h1>CSC445: Assignment 1 - Developing TCP/UDP Client to Measure Network Performance</h1>
+<h2>Nathaniel Wolf</h2>
 <canvas id="myChart"></canvas>
 <script>
     var ctx = document.getElementById('myChart').getContext('2d');
