updated html project documentation

--- a/index.html
+++ b/index.html
@@ -1,99 +1,253 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
-<h1>CSC445: Assignment 1 - Measuring Network Performance</h1>
-<h2>Nathaniel Wolf</h2>
-<p>The purpose of this assignment was to create a TCP and UDP client that connects to a respective server and sends and receives a series packets.
-    With that were four main use cases to account for.</p>
-<ul>
-    <li>1. TCP:  Sending and Receiving packets of 8, 32, 512, 1024 Bytes and measuring the Round Trip Time</li>
-    <li>2. UDP:  Sending and Receiving packets of 8, 32, 512, 1024 Bytes and measuring the Round Trip Time</li>
-    <li>3. TCP:  Sending and Receiving combinations of 1024 1024 Byte Messages, 2048 512 Byte Messages, and 8192 128 Byte Messages to measure throughput.</li>
-    <li>4. UDP:  Sending and Receiving combinations of 1024 1024 Byte Messages, 2048 512 Byte Messages, and 8192 128 Byte Messages to measure throughput.</li>
-</ul>
-<p>
-    This assignment involved making use of the Golang standard "net" package for the purpose of creating TCP and UDP sockets.  Additionally, the "time" package was used to measure the time it took to send and receive packets
-    and the "flag" package was used to parse command line arguments to easily specify the programs state when launching it in client or server mode across different servers.  Golang's modern approach to concurrency and it's
-    inherent idiomatic nature made it a great choice for this assignment and a good choice for network programming in general.
-    <br>
-</p>
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <h1>CSC445: Assignment 1 - Measuring Network Performance</h1>
+    <h2>Nathaniel Wolf</h2>
+    <p>
+      The purpose of this assignment was to create a TCP and UDP client that
+      connects to a respective server and sends and receives a series packets.
+      With that were four main use cases to account for.
+    </p>
+    <ul>
+      <li>
+        1. TCP: Sending and Receiving packets of 8, 32, 512, 1024 Bytes and
+        measuring the Round Trip Time.
+      </li>
+      <li>
+        2. UDP: Sending and Receiving packets of 8, 32, 512, 1024 Bytes and
+        measuring the Round Trip Time.
+      </li>
+      <li>
+        3. TCP: Sending and Receiving combinations of 1024 1024 Byte Messages,
+        2048 512 Byte Messages, and 8192 128 Byte Messages to measure
+        throughput.
+      </li>
+      <li>
+        4. UDP: Sending and Receiving combinations of 1024 1024 Byte Messages,
+        2048 512 Byte Messages, and 8192 128 Byte Messages to measure
+        throughput.
+      </li>
+    </ul>
+    <p>
+      Additionally it was required to test 3 different pairs of machines across
+      two different networks. I was succesful in doing this and the machines I
+      tested are described as such:
+    </p>
+    <ul>
+      <li>
+        <b>Pi to Moxie:</b> These are both school servers that exist on the SUNY
+        Oswego campus. In this instance I SSH copied a copy of my program to the
+        respective machines and conducted my tests by launching the program and
+        testing in the various states. In this case PI was the client and Moxie
+        was the host in all instances.
+      </li>
+      <li>
+        <b>Personal Laptop to PI over Wireless: </b> In this case I was able to
+        succesfully connect to the aformentioned Pi server acting as a server in
+        this instance whilst connected to SUNY Oswego's WLAN. (Wireless Local
+        Area Network). It is worth mentioning that I initially attempted to
+        connect with my sever from home, however I was unable to. This is is
+        sensible since it would not be security minded to arbitarily have the
+        ports open I used in this project. You will notice that the wireless
+        network performance was much inferior to wired connections.
+      </li>
+      <li>
+        <b>Amazon Web Service EC2 Instance A to EC2 Instnace B: </b>Similarily
+        to Pi to Moxie I pushed my application to these respective servers. In
+        this case I set up an EC2 instance on the same subnet within an Amazon
+        Web Service Virtual Private Cloud network. These are machines that exist
+        in the cloud in which Amazon handles the security and hardware
+        management of said servers. Notice that performance on these networks
+        are exceptional.
+      </li>
+    </ul>
+    <br />
+    <p>
+      This assignment involved making use of the Golang standard "net" package
+      for the purpose of creating TCP and UDP sockets. Additionally, the "time"
+      package was used to measure the time it took to send and receive packets
+      and the "flag" package was used to parse command line arguments to easily
+      specify the programs state when launching it in client or server mode
+      across different servers.<br />Golang's modern approach to concurrency,
+      and it's inherent idiomatic nature made it a great choice for this
+      assignment and a good choice for network programming in general.
+      <br />
+    </p>
 
-<h2>Results</h2>
-<h3>Wired Connections</h3>
-<h2>Round Trip Time (in microseconds)</h2>>
-<canvas id="myChart" width=1000></canvas>
-<script>
-    var ctx = document.getElementById('myChart').getContext('2d');
-    var rttLaptopPiTCP = [261, 286, 368, 335];
-    var rttLaptopPiUDP = [496, 402, 429, 419];
-    var rttMoxiePiTCP = [557, 524, 511, 547];
-    var rttMoxiePiUDP = [582, 576, 609, 719];
+    <h2>Results</h2>
+    <h3>Wired Connections</h3>
+    <h4>Round Trip Time (in microseconds)</h4>
+    <canvas id="wiredRttCtx"></canvas>
+    <h4>Throughput (in Mbps)</h4>
+    <canvas id="wiredThroughputCtx"></canvas>
+    <h3>Wireless Connections</h3>
+    <h4>Round Trip Time (in microseconds)</h4>
+    <h4>Throughput (in Mbps)</h4>
 
-    var chart = new Chart(ctx, {
-        type: 'bar',
+    <script>
+      var wiredRttCtx = document.getElementById("wiredRttCtx").getContext("2d");
+      var rttPiMoxieTCP = [261, 286, 368, 335];
+      var rttPiMoxieUDP = [496, 402, 429, 419];
+      var rttEC2TCP = [557, 524, 511, 547];
+      var rttEC2UDP = [582, 576, 609, 719];
+
+      var wiredRttChart = new Chart(wiredRttCtx, {
+        type: "bar",
         data: {
-            labels: ['8 Bytes', '32 Bytes', '512 Bytes', '1024 Bytes'],
-            datasets: [{
-                label: 'Laptop -> Pi (Wireless) TCP',
-                data: rttLaptopPiTCP,
-                backgroundColor: 'rgba(255, 99, 132, 0.5)',
-                borderColor: 'rgba(255, 99, 132, 1)',
-                borderWidth: 1
-            }, {
-                label: 'Laptop -> Pi (Wireless) UDP',
-                data: rttLaptopPiUDP,
-                backgroundColor: 'rgba(54, 162, 235, 0.5)',
-                borderColor: 'rgba(54, 162, 235, 1)',
-                borderWidth: 1
-            }, {
-                label: 'Pi -> Moxie TCP',
-                data: rttMoxiePiTCP,
-                backgroundColor: 'rgba(255, 206, 86, 0.5)',
-                borderColor: 'rgba(255, 206, 86, 1)',
-                borderWidth: 1
-            }, {
-                label: 'Pi -> Moxie UDP',
-                data: rttMoxiePiUDP,
-                backgroundColor: 'rgba(75, 192, 192, 0.5)',
-                borderColor: 'rgba(75, 192, 192, 1)',
-                borderWidth: 1
-            }]
+          labels: ["8 Bytes", "32 Bytes", "512 Bytes", "1024 Bytes"],
+          datasets: [
+            {
+              label: "Pi -> Moxie TCP",
+              data: rttPiMoxieTCP,
+              backgroundColor: "rgba(255, 99, 132, 0.5)",
+              borderColor: "rgba(255, 99, 132, 1)",
+              borderWidth: 1,
+            },
+            {
+              label: "Pi -> Moxie UDP",
+              data: rttPiMoxieUDP,
+              backgroundColor: "rgba(54, 162, 235, 0.5)",
+              borderColor: "rgba(54, 162, 235, 1)",
+              borderWidth: 1,
+            },
+            {
+              label: "AWS EC2 A -> EC2 B TCP",
+              data: rttEC2TCP,
+              backgroundColor: "rgba(255, 206, 86, 0.5)",
+              borderColor: "rgba(255, 206, 86, 1)",
+              borderWidth: 1,
+            },
+            {
+              label: "AWS EC2 A -> EC2 B TCP",
+              data: rttEC2UDP,
+              backgroundColor: "rgba(75, 192, 192, 0.5)",
+              borderColor: "rgba(75, 192, 192, 1)",
+              borderWidth: 1,
+            },
+          ],
         },
         options: {
-            responsive: false,
-            legend: {
-                position: 'top',
+          responsive: false,
+          legend: {
+            position: "top",
+          },
+          title: {
+            display: true,
+            text: "RTT (in microseconds)",
+          },
+          scales: {
+            yAxes: [
+              {
+                scaleLabel: {
+                  display: true,
+                  labelString: "RTT (in microseconds)",
+                  color: "rgba(255, 99, 132, 1)",
+                },
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+            xAxes: [
+              {
+                scaleLabel: {
+                  display: true,
+                  labelString: "Packet Size",
+                  color: "rgba(255, 99, 132, 1)",
+                },
+              },
+            ],
+          },
+        },
+      });
+
+      var wiredRttCtx = document
+        .getElementById("wiredThroughputCtx")
+        .getContext("2d");
+
+      var throughPiMoxieTCP = [833, 48, 103];
+      var throughPiMoxieUDP = [57.23, 33.53, 8.79];
+      var throughputEC2TCP = [1775, 829, 313];
+      var throughputEC2UDP = [18.5, 1019, 2.42];
+      var wiredThroughputChart = new Chart(wiredRttCtx, {
+        type: "bar",
+        data: {
+          labels: [
+            "1024 1024 Byte Msgs",
+            "2048 512 Byte Msgs",
+            "8192 128 Byte Msgs",
+          ],
+          datasets: [
+            {
+              label: "Pi -> Moxie TCP",
+              data: throughPiMoxieTCP,
+              backgroundColor: "rgba(255, 99, 132, 0.5)",
+              borderColor: "rgba(255, 99, 132, 1)",
+              borderWidth: 1,
             },
-            title: {
-                display: true,
-                text: 'RTT (in microseconds)'
+            {
+              label: "Pi -> Moxie UDP",
+              data: throughPiMoxieUDP,
+              backgroundColor: "rgba(54, 162, 235, 0.5)",
+              borderColor: "rgba(54, 162, 235, 1)",
+              borderWidth: 1,
             },
-            scales: {
-                yAxes: [{
-                    scaleLabel: {
-                        display: true,
-                        labelString: 'Latency (microseconds)',
-                        color: 'rgba(255, 99, 132, 1)'
-                    },
-                    ticks: {
-                        beginAtZero: true
-                    }
-                }],
-                xAxes: [{
-                    scaleLabel: {
-                        display: true,
-                        labelString: 'Packet Size',
-                        color: 'rgba(255, 99, 132, 1)'
-                    }
-                }]
-            }
-        }
-    });
-</script>
-</body>
+            {
+              label: "AWS EC2 A -> EC2 B TCP",
+              data: throughputEC2TCP,
+              backgroundColor: "rgba(255, 206, 86, 0.5)",
+              borderColor: "rgba(255, 206, 86, 1)",
+              borderWidth: 1,
+            },
+            {
+              label: "AWS EC2 A -> EC2 B UDP",
+              data: throughputEC2UDP,
+              backgroundColor: "rgba(75, 192, 192, 0.5)",
+              borderColor: "rgba(75, 192, 192, 1)",
+              borderWidth: 1,
+            },
+          ],
+        },
+        options: {
+          responsive: false,
+          legend: {
+            position: "top",
+          },
+          title: {
+            display: true,
+            text: "Throughput (in Mbps)",
+          },
+          scales: {
+            yAxes: [
+              {
+                scaleLabel: {
+                  display: true,
+                  labelString: "Throughput (in Mbps)",
+                  color: "rgba(255, 99, 132, 1)",
+                },
+                ticks: {
+                  beginAtZero: true,
+                },
+              },
+            ],
+            xAxes: [
+              {
+                scaleLabel: {
+                  display: true,
+                  labelString: "Messages x Size in Bytes",
+                  color: "rgba(255, 99, 132, 1)",
+                },
+              },
+            ],
+          },
+        },
+      });
+    </script>
+  </body>
 </html>
