--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     </ul>
     <p>
       Additionally it was required to test 3 different pairs of machines across
-      two different networks. I was succesful in doing this and the machines I
-      tested are described as such:
+      two different networks.  The machines and networks are described as followed:
     </p>
     <ul>
       <li>
@@ -49,16 +48,16 @@
       </li>
       <li>
         <b>Personal Laptop to PI over Wireless: </b> In this case I was able to
-        succesfully connect to the aformentioned Pi server acting as a server in
+        successfully connect to the aforementioned Pi server acting as a server in
         this instance whilst connected to SUNY Oswego's WLAN. (Wireless Local
         Area Network). It is worth mentioning that I initially attempted to
         connect with my sever from home, however I was unable to. This is is
-        sensible since it would not be security minded to arbitarily have the
+        sensible since it would not be security minded to arbitrarily have the
         ports open I used in this project. You will notice that the wireless
         network performance was much inferior to wired connections.
       </li>
       <li>
-        <b>Amazon Web Service EC2 Instance A to EC2 Instnace B: </b>Similarily
+        <b>Amazon Web Service EC2 Instance A to EC2 Instance B: </b>Similarly
         to Pi to Moxie I pushed my application to these respective servers. In
         this case I set up an EC2 instance on the same subnet within an Amazon
         Web Service Virtual Private Cloud network. These are machines that exist
@@ -76,7 +75,6 @@
       across different servers.<br />Golang's modern approach to concurrency,
       and it's inherent idiomatic nature made it a great choice for this
       assignment and a good choice for network programming in general.
-      <br />
     </p>
 
     <h2>Results</h2>
