Added github repo link gi

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Title</title>
+    <title>
+      CSC445: Assignment 1 - Measuring Network Performance - Nathaniel Wolf
+    </title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="index.css" />
   </head>
@@ -10,6 +12,12 @@
     <div class="section">
       <h1>CSC445: Assignment 1 - Measuring Network Performance</h1>
       <h2>Nathaniel Wolf</h2>
+      <h1>
+        <a
+          href="https://github.com/NULLWulf/CSC-445-Assignment1-TCP-UDP-Client-Server/tree/main"
+          >GitHub Repository</a
+        >
+      </h1>
       <p>
         The purpose of this assignment was to create a TCP and UDP client that
         connects to a respective server and sends and receives a series packets.
